[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "check_docker"
author = "Tim Laurence"
author-email = "timdaman@gmail.com"
home-page = "https://github.com/timdaman/check_docker"
description-file = "README.rst"
requires-python=">3"
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: System Administrators",
    "Environment :: Other Environment",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking",
]

[tool.flit.scripts]
check_docker = "check_docker.check_docker:main"
check_swarm = "check_docker.check_swarm:main"
