[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "check_docker"
version = "2.1.0"
description = "Nagios/NRPE compatible plugins for checking Docker based services"
license = "GPL-3.0"
authors = ["Tim Laurence <timdaman@gmail.com>"]
readme = "README.rst"
homepage = "https://github.com/timdaman/check_docker"
repository = "https://github.com/timdaman/check_docker"

classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: System Administrators",
    "Environment :: Other Environment",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking",
]
packages = [
    { include = "check_docker" },
]

[tool.poetry.scripts]
check_docker = "check_docker.check_docker:main"
check_swarm = "check_docker.check_swarm:main"



